[gd_scene load_steps=4 format=3 uid="uid://b8f1ads7dsgs6"]

[ext_resource type="Script" path="res://scenes/player_upgrade_panel/player_upgrade_panel.gd" id="1_5eoos"]
[ext_resource type="Script" path="res://scenes/ui/label/game_label.gd" id="1_dfc4r"]
[ext_resource type="Theme" uid="uid://dotqp0rwr17pi" path="res://resources/theme.tres" id="2_43bs0"]

[node name="PlayerUpgradePanel" type="PanelContainer"]
offset_right = 72.0
offset_bottom = 34.0
theme = ExtResource("2_43bs0")
script = ExtResource("1_5eoos")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UpgradeTitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_43bs0")
theme_override_font_sizes/font_size = 6
text = "Test Name"
vertical_alignment = 2
autowrap_mode = 2
script = ExtResource("1_dfc4r")

[node name="UpgradeDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_43bs0")
theme_override_font_sizes/font_size = 4
text = "Test description text"
script = ExtResource("1_dfc4r")
